# monomix

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SCOPE.md
.claude/: settings.json
decisions/: 0001-implementation-language.md  0002-high-level-architecture.md  0003-z3-as-smt-backend.md  0004-native-decision-procedures.md
designs/: differentiation.md  equation-solving.md  expression-dag.md  numeric-eval.md  parser.md  polynomial-ops.md  simplifier.md  smt.md  substitution.md
docs/: python-bindings.md
docs/superpowers/plans/: 2026-05-07-rust-kernel.md  2026-05-13-python-bindings.md
docs/superpowers/specs/: 2026-05-07-rust-kernel-design.md  2026-05-13-python-bindings-design.md  2026-05-13-python-bindings-followups.md
monomix/: README.md
monomix/python/: pyproject.toml
monomix/python/monomix/: __init__.py
monomix/python/tests/: test_solver.py
monomix/rust/solver-bridge/src/: lib.rs
python/: README.md  pyproject.toml
python/monomix/: __init__.py  _kernel.pyi  errors.py  expr.py  session.py
python/monomix/smt/: __init__.py  errors.py  results.py  translate.py  z3_backend.py
python/monomix/solver/: __init__.py  errors.py  z3_backend.py
python/tests/: test_expr.py  test_gil.py  test_kernel_calls.py  test_session.py  test_smt.py  test_solver.py
rust/monomix-kernel/: Cargo.toml
rust/monomix-kernel/benches/: kernel.rs
rust/monomix-kernel/fuzz/: Cargo.toml
rust/monomix-kernel/fuzz/fuzz_targets/: fuzz_diff.rs  fuzz_parser.rs  fuzz_simplify.rs
rust/monomix-kernel/proptest-regressions/poly/: mod.txt
rust/monomix-kernel/src/: error.rs  lib.rs
rust/monomix-kernel/src/diff/: arith.rs  driver.rs  functions.rs  mod.rs  plugin.rs  table.rs
rust/monomix-kernel/src/evalnum/: mod.rs
rust/monomix-kernel/src/expr/: mod.rs
rust/monomix-kernel/src/parser/: ast.rs  expr.rs  lexer.rs  mod.rs  stmt.rs
rust/monomix-kernel/src/poly/: mod.rs
rust/monomix-kernel/src/simplify/: driver.rs  like_terms.rs  mod.rs  numeric.rs  patterns.rs  powers.rs  rational.rs  rules.rs
rust/monomix-kernel/src/solve/: mod.rs
rust/monomix-kernel/src/substitute/: mod.rs
rust/monomix-kernel/tests/: golden_tests.rs
rust/monomix-kernel/tests/golden/: README.md  alg_expr.toml  diff.toml  divergences.toml  poly_div.toml  simplify.toml  solve_linear_quadratic.toml
rust/monomix-py/: Cargo.toml
rust/monomix-py/src/: errors.rs  expr.rs  kernel_fns.rs  lib.rs  session.rs
rust/solver-bridge/: Cargo.toml  README.md
rust/solver-bridge/src/: lib.rs
