[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "monomix"
version = "0.0.1"
description = "Modern CAS rewrite of REDUCE — Python facade over the Rust kernel"
requires-python = ">=3.11"
authors = [{ name = "Roman" }]
license = { text = "MIT" }

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-benchmark>=4",
  "hypothesis>=6",
  "pyright>=1.1",
  "ruff>=0.6",
]

[tool.maturin]
manifest-path = "../rust/monomix-py/Cargo.toml"
python-source = "."
module-name = "monomix._kernel"
features = ["pyo3/extension-module"]
