[package]
name        = "monomix-py"
version     = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name        = "monomix_py"
crate-type  = ["cdylib"]

[dependencies]
pyo3              = { version = "0.22", features = ["extension-module", "num-bigint", "abi3-py311"] }
num-bigint        = "0.4"
num-rational      = "0.4"
num-traits        = "0.2"
monomix-kernel    = { path = "../monomix-kernel" }

[lints]
workspace = true
