[package]
name = "monomix-solver-bridge"
version = "0.0.1"
edition = "2021"
license = "BSD-2-Clause"
description = "Native Rust bridge from the Monomix kernel to Z3."
publish = false

# NOTE: this crate is not yet wired into a Cargo workspace and the
# z3 dependency is commented out. Phase 1 of the SMT integration runs
# entirely from Python. This crate stakes out the eventual API shape
# so that when the Rust kernel matures it slots in without rework.

[dependencies]
# z3 = "0.12"        # high-level wrapper, depends on z3-sys
# z3-sys = "0.8"     # raw FFI; pick one or the other
thiserror = "1"

[lib]
crate-type = ["rlib"]
